--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,8 @@ yarn-error.log
 # Visual Studio Code
 .vscode/*
 .vscode
+.angular/*
+.angular
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
